samples/_failures_safe/1761604926_66a3d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9bdc5fa.c: In function ‘main’:
./samples/SAFE/__tmp_c9bdc5fa.c:141:5: error: expected expression at end of input
  141 |     if (cols1 == rows2)
      |     ^~
./samples/SAFE/__tmp_c9bdc5fa.c:141:5: error: expected declaration or statement at end of input
